<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_background"
        android:padding="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp">

    <ImageView
            android:id="@+id/iv_banner"
            android:layout_width="116dp"
            android:layout_height="172dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp"
            android:scaleType="centerCrop" />

    <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/iv_banner"
            android:layout_toEndOf="@+id/iv_banner"
            android:layout_marginBottom="8dp"
            android:maxLines="1"
            android:ellipsize="end" />

    <TextView
            android:id="@+id/tv_directors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorItemText"
            android:textSize="@dimen/item_text_size"
            android:layout_below="@+id/tv_title"
            android:layout_alignLeft="@+id/tv_title"
            android:layout_alignStart="@+id/tv_title"
            android:layout_marginBottom="9dp" />

    <ImageView
            android:id="@+id/iv_star_01"
            android:layout_width="@dimen/item_star_size"
            android:layout_height="@dimen/item_star_size"
            android:layout_below="@+id/tv_directors"
            android:layout_alignLeft="@+id/tv_title"
            android:layout_alignStart="@+id/tv_title"
            android:layout_marginRight="@dimen/item_star_padding_right"
            android:layout_marginEnd="@dimen/item_star_padding_right"
            android:contentDescription="@string/iv_cd_star_01"
            android:scaleType="fitCenter"
            android:tint="@color/colorItemStar"
            android:layout_marginBottom="9dp"/>
    <ImageView
            android:id="@+id/iv_star_02"
            android:layout_width="@dimen/item_star_size"
            android:layout_height="@dimen/item_star_size"
            android:layout_alignTop="@+id/iv_star_01"
            android:layout_toRightOf="@+id/iv_star_01"
            android:layout_toEndOf="@+id/iv_star_01"
            android:layout_marginRight="@dimen/item_star_padding_right"
            android:layout_marginEnd="@dimen/item_star_padding_right"
            android:contentDescription="@string/iv_cd_star_02"
            android:scaleType="fitCenter"
            android:tint="@color/colorItemStar"/>
    <ImageView
            android:id="@+id/iv_star_03"
            android:layout_width="@dimen/item_star_size"
            android:layout_height="@dimen/item_star_size"
            android:layout_alignTop="@+id/iv_star_02"
            android:layout_toRightOf="@+id/iv_star_02"
            android:layout_toEndOf="@+id/iv_star_02"
            android:layout_marginRight="@dimen/item_star_padding_right"
            android:layout_marginEnd="@dimen/item_star_padding_right"
            android:contentDescription="@string/iv_cd_star_03"
            android:scaleType="fitCenter"
            android:tint="@color/colorItemStar"/>
    <ImageView
            android:id="@+id/iv_star_04"
            android:layout_width="@dimen/item_star_size"
            android:layout_height="@dimen/item_star_size"
            android:layout_alignTop="@+id/iv_star_03"
            android:layout_toRightOf="@+id/iv_star_03"
            android:layout_toEndOf="@+id/iv_star_03"
            android:layout_marginRight="@dimen/item_star_padding_right"
            android:layout_marginEnd="@dimen/item_star_padding_right"
            android:contentDescription="@string/iv_cd_star_04"
            android:scaleType="fitCenter"
            android:tint="@color/colorItemStar"/>
    <ImageView
            android:id="@+id/iv_star_05"
            android:layout_width="@dimen/item_star_size"
            android:layout_height="@dimen/item_star_size"
            android:layout_alignTop="@+id/iv_star_04"
            android:layout_toRightOf="@+id/iv_star_04"
            android:layout_toEndOf="@+id/iv_star_04"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/iv_cd_star_05"
            android:scaleType="fitCenter"
            android:tint="@color/colorItemStar"/>

    <TextView
            android:id="@+id/tv_rating_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorItemText"
            android:textSize="@dimen/item_text_size"
            android:layout_marginTop="-2dp"
            android:layout_alignTop="@+id/iv_star_05"
            android:layout_toRightOf="@+id/iv_star_05"
            android:layout_toEndOf="@+id/iv_star_05" />

    <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorItemCategory"
            android:textSize="@dimen/item_text_size"
            android:layout_toRightOf="@+id/tv_rating_amount"
            android:layout_toEndOf="@+id/tv_rating_amount"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_alignTop="@+id/tv_rating_amount"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

    <TextView
            android:id="@+id/tv_resume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorItemText"
            android:textSize="@dimen/item_text_size"
            android:layout_below="@+id/iv_star_01"
            android:layout_alignLeft="@+id/tv_title"
            android:layout_alignStart="@+id/tv_title"
            android:maxLines="5"
            android:ellipsize="end"/>
</RelativeLayout>